# summary_system

./: .gitignore  README.md  api_server.py  app.py  batch_summary.py  config.example.yaml  interactions.js  pages_ui.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
agents/: observer.py  research_agent.py  sentinel.py
config/: theme.css
data/: sources.json  watchlist.json
docs/: git_commands_reference.md  keyword_search_implementation_plan.md  ragas_eval.md  retrieval_reranker_implementation_plan.md
evals/: __init__.py  auto_retrieve.py  config.py  hooks.py  providers.py  queue.py  ragas_eval.py  retrieval_gate.py  summary_eval.py  trace.py
extractors/: pdf.py  webpage.py  youtube.py
frontend/: next.config.ts  package-lock.json  package.json
generators/: podcast_generator.py
scripts/: analyze_pdf.py  audit_library.py  compare_tts.py  debug_ddg.py  debug_feed.py  fetch_trending.py  find_ids_ddg.py  get_video_channel.py  reproduce_issue.py  resolve_channels.py  run_ragas_eval.py  test_ddg_simple.py  test_gtts.py  test_research_flow.py  test_research_query.py  test_scan.py  test_thai_path.py  verify_gpu_mode.py  verify_tts_optimization.py
summarizer/: __init__.py  langchain_chat.py
tests/: conftest.py  test_content_quality_filter.py  test_hybrid_retriever.py  test_keyword_search.py  test_observer.py  test_observer_trending.py  test_obsidian_integration.py  test_ollama_summarizer.py  test_pdf_extractor.py  test_ragas_eval.py  test_reranker.py  test_research_agent.py  test_retry_retrieve.py  test_sentinel_resolution.py  test_summary_eval.py  (+2 more)
(+38 files in other folders)
