[project]
name = "summary"
version = "1.0.0"
description = "Knowledge Summary System - Extract, summarize, and chat with content from YouTube, web, PDFs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PP"}
]
keywords = ["summarization", "youtube", "pdf", "ai", "ollama", "streamlit"]

dependencies = [
    "streamlit>=1.28.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "ollama>=0.1.0",
    "langchain>=0.1.0",
    "langchain-ollama>=0.0.1",
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2024.1.0",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.28.0",
    "feedparser>=6.0.0",
    "pymupdf>=1.23.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "duckduckgo-search>=4.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
eval = [
    "ragas>=0.2.0,<0.3.0",
    "datasets>=2.18.0",
    "langchain-google-genai>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-ollama>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
